@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.148 2005/04/23 17:09:43 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.149 2005/04/28 03:56:08 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  27 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added post-install script code
 
   23 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed encapsulation issues in GLIClientController (bug #90141)
